--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -3,14 +3,14 @@ CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
 
-### 编译优化 ###
+### 极致编译优化 ###
 CONFIG_CPU_MITIGATIONS=n
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 CONFIG_KERNEL_CLANG_LLVM=y
 CONFIG_USE_LLD=y
 CONFIG_LLVM_POLLY=y
 
-### CPU调度优化 ###
+### J4125专属调度优化 ###
 CONFIG_SCHED_BMQ=y
 CONFIG_SCHED_MC_PRIO=y
 CONFIG_PREEMPT_RT=y
@@ -24,7 +24,7 @@ CONFIG_SCHED_MC=y
 CONFIG_PREEMPT_DYNAMIC=y
 CONFIG_SCHED_HRTICK=y
 
-### 内存管理优化 ###
+### 内存优化 (8GB专用) ###
 CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=y
 CONFIG_LRU_GEN=y
 CONFIG_LRU_GEN_ENABLED=y
@@ -45,6 +45,10 @@ CONFIG_TCP_MD5SIG=y
 CONFIG_TCP_AO=y
 CONFIG_TCP_NO_TSQ=y
 CONFIG_NET_FLOW_LIMIT=y
+CONFIG_PACKAGE_kmod-tcp-bbr=y
+CONFIG_PACKAGE_kmod-sched-core=y
+CONFIG_PACKAGE_kmod-sched-fq=y
+CONFIG_PACKAGE_kmod-sched-bpf=y
 CONFIG_TCP_CONG_BBR=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_ZERO_COPY_RECEIVE=y
@@ -55,9 +59,8 @@ CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_NET_RX_BUSY_POLL=y
 CONFIG_NET_RX_BUSY_POLL_BUDGET=192
 CONFIG_IP_MULTIPLE_TABLES=y
-CONFIG_NET_NS=y  # 关键修复：网络命名空间支持
 
-### 网卡驱动优化 ###
+### i226网卡极致优化 ###
 CONFIG_IGC=y
 CONFIG_IGC_DCA=y
 CONFIG_IGC_HWMON=y
@@ -70,7 +73,7 @@ CONFIG_IGC_FPGA=y
 CONFIG_IGC_XDP=y
 CONFIG_IGC_TAPRIO=y
 
-### XDP加速体系 ###
+### XDP核心配置 ###
 CONFIG_XDP_SOCKETS=y
 CONFIG_KERNEL_XDP_SOCKETS=y
 CONFIG_XDP_UMEM=y
@@ -79,31 +82,53 @@ CONFIG_BPF=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT=y
 CONFIG_BPF_JIT_ALWAYS_ON=y
-CONFIG_BPF_JIT_DEFAULT_ON=y  # 关键修复：确保JIT默认开启
+CONFIG_DEBUG_INFO_BTF=y
 CONFIG_KERNEL_BPF_EVENTS=y
-CONFIG_KERNEL_LWTUNNEL_BPF=y
+CONFIG_KERNEL_DEBUG_KERNEL=y
+CONFIG_KERNEL_DEBUG_INFO=y
+CONFIG_KERNEL_DEBUG_INFO_REDUCED=n
+CONFIG_KERNEL_DEBUG_INFO_BTF=y
 CONFIG_KERNEL_BPF_STREAM_PARSER=y
 CONFIG_KERNEL_CGROUPS=y
 CONFIG_KERNEL_KALLSYMS=y
 CONFIG_KERNEL_KPROBES=y
 CONFIG_KERNEL_KPROBE_EVENTS=y
+CONFIG_NET_INGRESS=y
+CONFIG_NET_EGRESS=y
 CONFIG_NET_CLS_ACT=y
 CONFIG_NET_CLS_BPF=y
 CONFIG_NET_ACT_BPF=y
 CONFIG_NET_SCH_INGRESS=y
+CONFIG_KERNEL_MODULE_ALLOW_BTF_MISMATCH=y
 CONFIG_KERNEL_NETKIT=y
+CONFIG_PACKAGE_iproute2-tc=y
+CONFIG_PACKAGE_ethtool-full=y
+CONFIG_PACKAGE_bpftool-full=y
+CONFIG_PACKAGE_libbpf-extra=y
+CONFIG_PACKAGE_libbpf=y
+CONFIG_PACKAGE_libxdp=y
+CONFIG_PACKAGE_libtirpc=y
+CONFIG_PACKAGE_clang=y
+CONFIG_PACKAGE_llvm=y
+CONFIG_KERNEL_LWTUNNEL_BPF=y
+CONFIG_KERNEL_BPF_EVENTS=y
+CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
 CONFIG_BPF_EVENTS=y
-CONFIG_RETPOLINE=y  # 关键修复：Spectre漏洞防护
+CONFIG_DEBUG_KERNEL=y
+CONFIG_DEBUG_INFO=y
+CONFIG_DEBUG_INFO_REDUCED=n
 
-### 中断系统优化 ###
+### 中断优化 ###
 CONFIG_IRQ_FORCED_THREADING=y
 CONFIG_GENERIC_IRQ_IPI=y
+CONFIG_PACKAGE_irqbalance=y
+CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
 CONFIG_IRQ_PIPELINE=y
 CONFIG_HAVE_IRQ_PIPELINE=y
 CONFIG_IRQ_FASTEOI_HIER=y
 
-### CPU电源管理 ###
+### 电源与CPU调控 ###
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_X86_INTEL_PSTATE=y
@@ -114,48 +139,30 @@ CONFIG_INTEL_PSTATE_HWP=y
 CONFIG_INTEL_EPB=y
 CONFIG_ACPI_CPPC_LIB=y
 
-### 文件系统优化 ###
+### 文件系统加速 ###
 CONFIG_SQUASHFS_XZ=y
 CONFIG_SQUASHFS_DECOMP_MULTI_PERCPU=y
+CONFIG_PACKAGE_kmod-fs-ntfs3=y
 CONFIG_BCACHEFS=y
 CONFIG_FS_VERITY=y
 
-### 安全加固 ###
+### 安全增强 ###
 CONFIG_STRICT_KERNEL_RWX=y
 CONFIG_HARDENED_USERCOPY=y
 CONFIG_RANDOM_TRUST_CPU=y
 CONFIG_INIT_STACK_ALL_ZERO=y
+CONFIG_PACKAGE_openssl-util=y
 
-### 诊断监控 ###
-CONFIG_DEBUG_KERNEL=y
-CONFIG_DEBUG_INFO=y  # 关键修复：BTF依赖项
-CONFIG_DEBUG_INFO_BTF=y
-CONFIG_DEBUG_INFO_REDUCED=n
+### 调试精简 ###
 CONFIG_PANIC_ON_OOPS=y
 CONFIG_NET_DROP_MONITOR=y
 
-### 软件包配置 ###
-CONFIG_PACKAGE_kmod-tcp-bbr=y
-CONFIG_PACKAGE_kmod-sched-core=y
-CONFIG_PACKAGE_kmod-sched-fq=y
-CONFIG_PACKAGE_kmod-sched-bpf=y
-CONFIG_PACKAGE_bpftool-full=y
-CONFIG_PACKAGE_libbpf=y
-CONFIG_PACKAGE_libbpf-extra=y
-CONFIG_PACKAGE_libxdp=y
-CONFIG_PACKAGE_xdp-tools=y
-CONFIG_PACKAGE_libtirpc=y
-CONFIG_PACKAGE_clang=y
-CONFIG_PACKAGE_llvm=y
-CONFIG_PACKAGE_irqbalance=y
+### 必备工具 ###
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_iperf3=y
-CONFIG_PACKAGE_ethtool-full=y
-CONFIG_PACKAGE_iproute2-tc=y
-CONFIG_PACKAGE_kmod-fs-ntfs3=y
-CONFIG_PACKAGE_openssl-util=y
-CONFIG_PACKAGE_ipv6helper=y
-CONFIG_PACKAGE_ip6tables=y
+CONFIG_PACKAGE_ethtool=y
+CONFIG_PACKAGE_xdp-tools=y
+CONFIG_PACKAGE_bpftool=y
 
 ### LuCI应用 ###
 CONFIG_PACKAGE_luci-app-arpbind=y
@@ -164,15 +171,17 @@ CONFIG_PACKAGE_luci-app-nlbwmon=y
 CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-filemanager=y
-CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_PACKAGE_einat-ebpf=y
 CONFIG_PACKAGE_luci-app-einat=y
 
 ### IPv6支持 ###
+CONFIG_PACKAGE_ipv6helper=y
+CONFIG_PACKAGE_ip6tables=y
+CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
 
-### 固件结构配置 ###
+### 固件设置 ###
 CONFIG_TARGET_KERNEL_PARTSIZE=32
 CONFIG_TARGET_ROOTFS_PARTSIZE=944
 CONFIG_GRUB_IMAGES=y
