--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -8,14 +8,13 @@ CONFIG_CPU_MITIGATIONS=n
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 CONFIG_KERNEL_CLANG_LLVM=y
 CONFIG_USE_LLD=y
-CONFIG_LLVM_POLLY=y
+CONFIG_LTO_CLANG_THIN=y
 
 ### J4125专属调度优化 ###
-CONFIG_SCHED_ALT=y
 CONFIG_SCHED_PDS=y
 CONFIG_TICK_CPU_ACCOUNTING=n
 CONFIG_SCHED_MC_PRIO=y
-CONFIG_PREEMPT=y               # 标准完全抢占替代RT
+CONFIG_PREEMPT=y
 CONFIG_HZ=1000
 CONFIG_NO_HZ_FULL=y
 CONFIG_NO_HZ_FULL_ALL=y
@@ -24,23 +23,21 @@ CONFIG_SCHED_CORE=y
 CONFIG_SCHED_MC=y
 CONFIG_PREEMPT_DYNAMIC=y
 CONFIG_SCHED_HRTICK=y
+CONFIG_RCU_BOOST=y
+CONFIG_RCU_NOCB_CPU=y
+CONFIG_SOFTIRQ_ON_OWN_STACK=y  # 新增中断栈优化
 
 ### 内存优化 (8GB专用) ###
-CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=y
+CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
 CONFIG_LRU_GEN=y
 CONFIG_LRU_GEN_ENABLED=y
 CONFIG_LRU_GEN_WALKS_MMU=y
 CONFIG_COMPACTION=y
-CONFIG_ZSWAP=y
-CONFIG_ZSWAP_COMPRESSOR=lz4
-CONFIG_ZSWAP_ZPOOL=z3fold
-CONFIG_PAGE_POISONING=y
 CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
 CONFIG_DAMON=y
 CONFIG_DAMON_VADDR=y
 CONFIG_DAMON_PADDR=y
 CONFIG_DAMON_RECLAIM=y
-CONFIG_IDLE_PAGE_TRACKING=y
 
 ### 网络协议栈加速 ###
 CONFIG_TCP_MD5SIG=y
@@ -68,9 +65,17 @@ CONFIG_NET_XGRESS=y
 CONFIG_IP_ROUTE_MULTIPATH=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_NET_RX_BUSY_POLL=y
-CONFIG_NET_RX_BUSY_POLL_BUDGET=192
+CONFIG_NET_RX_BUSY_POLL_BUDGET=256  # 提升小包处理能力
 CONFIG_IP_MULTIPLE_TABLES=y
 CONFIG_NET_DEVLINK=y
+CONFIG_NET_SCH_DEFAULT=y
+CONFIG_DEFAULT_FQ_CODEL=y
+CONFIG_NET_CLS_FLOW=y
+CONFIG_NET_SCH_MQPRIO=y
+CONFIG_NET_EMATCH=y
+CONFIG_NET_ACT_MIRRED=y
+CONFIG_NET_IP_TUNNEL=y
+CONFIG_NET_SCH_TAPRIO=y  # 新增时间感知调度
 
 ### i226网卡极致优化 ###
 CONFIG_IGC=y
@@ -78,16 +83,19 @@ CONFIG_IGC_DCA=y
 CONFIG_IGC_HWMON=y
 CONFIG_IGC_DIM=y
 CONFIG_IGC_VLAN_STRIPPING=y
-CONFIG_IGC_FPGA_LOAD=y
 CONFIG_IGC_LRO=y
-CONFIG_IGC_FPGA=y
 CONFIG_IGC_XDP=y
 CONFIG_IGC_TAPRIO=y
+CONFIG_IGC_TSN=y
+CONFIG_IGC_LATENCY_TOLERANCE=y
 CONFIG_XPS=y
 CONFIG_XPS_DEFAULT_QUEUES=4
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_PCI_MSI=y
+CONFIG_IRQ_AFFINITY_HINT=y
+CONFIG_PCI_MSI_IRQ_DOMAIN=y
+CONFIG_IRQ_POLL=y  # 新增轮询模式优化
 
 ### XDP核心配置 ###
 CONFIG_XDP_SOCKETS=y
@@ -99,11 +107,11 @@ CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT=y
 CONFIG_BPF_JIT_ALWAYS_ON=y
 CONFIG_DEBUG_INFO_BTF=y
+CONFIG_DEBUG_KERNEL=y  # XDP调试需要
+CONFIG_DEBUG_INFO=y  # BPF调试需要
+CONFIG_DEBUG_INFO_REDUCED=n
+CONFIG_DEBUG_INFO_BTF=y
 CONFIG_KERNEL_BPF_EVENTS=y
-CONFIG_KERNEL_DEBUG_KERNEL=y
-CONFIG_KERNEL_DEBUG_INFO=y
-CONFIG_KERNEL_DEBUG_INFO_REDUCED=n
-CONFIG_KERNEL_DEBUG_INFO_BTF=y
 CONFIG_KERNEL_BPF_STREAM_PARSER=y
 CONFIG_KERNEL_CGROUPS=y
 CONFIG_KERNEL_KALLSYMS=y
@@ -127,9 +135,6 @@ CONFIG_PACKAGE_clang=y
 CONFIG_PACKAGE_llvm=y
 CONFIG_KERNEL_LWTUNNEL_BPF=y
 CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
-CONFIG_DEBUG_KERNEL=y
-CONFIG_DEBUG_INFO=y
-CONFIG_DEBUG_INFO_REDUCED=n
 
 ### 中断优化 ###
 CONFIG_IRQ_FORCED_THREADING=y
@@ -139,13 +144,14 @@ CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
 
 ### 电源与CPU调控 ###
+# 恢复Intel P-State优化
+CONFIG_INTEL_PSTATE=y
+CONFIG_INTEL_PSTATE_HWP=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_INTEL_PSTATE=y
 CONFIG_ACPI_CPPC_CPUFREQ=y
 CONFIG_INTEL_IDLE=n
 CONFIG_INTEL_TCC=y
-CONFIG_INTEL_PSTATE_HWP=y
 CONFIG_INTEL_EPB=y
 CONFIG_ACPI_CPPC_LIB=y
 
@@ -159,13 +165,10 @@ CONFIG_FS_VERITY=y
 ### 安全增强 ###
 CONFIG_STRICT_KERNEL_RWX=y
 CONFIG_HARDENED_USERCOPY=y
-CONFIG_RANDOM_TRUST_CPU=y
 CONFIG_INIT_STACK_ALL_ZERO=y
 CONFIG_PACKAGE_openssl-util=y
-
-### 调试精简 ###
-CONFIG_PANIC_ON_OOPS=y
-CONFIG_NET_DROP_MONITOR=y
+CONFIG_STACKPROTECTOR_STRONG=y
+CONFIG_RANDOMIZE_KSTACK_OFFSET=y  # 新增栈随机化
 
 ### 必备工具 ###
 CONFIG_PACKAGE_htop=y
@@ -181,13 +184,13 @@ CONFIG_PACKAGE_luci-app-nlbwmon=y
 CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 
-
 ### IPv6支持 ###
 CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
+CONFIG_IPV6_OPTIMISTIC_DAD=y  # 新增IPv6优化
 
 ### 固件设置 ###
 CONFIG_TARGET_KERNEL_PARTSIZE=32
