--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -73,6 +73,7 @@ CONFIG_PACKAGE_kmod-sched-bpf=y
 CONFIG_PACKAGE_kmod-sched-connmark=y
 CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-bonding=y
+CONFIG_PACKAGE_kmod-tcp-bbr=y
 
 # Netfilter加速
 CONFIG_PACKAGE_kmod-nft-netdev=y
