--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -64,6 +64,7 @@ CONFIG_TCP_MD5SIG=y
 CONFIG_TCP_AO=y
 CONFIG_TCP_NO_TSQ=y
 CONFIG_NET_FLOW_LIMIT=y
+CONFIG_NF_NAT_FULLCONE=y
 
 # 关键调度模块
 CONFIG_PACKAGE_kmod-sched-core=y
@@ -88,6 +89,7 @@ CONFIG_PACKAGE_kmod-nf-flow=y
 CONFIG_PACKAGE_kmod-ipt-offload=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-nf-reject=y
+CONFIG_PACKAGE_kmod-nft-fullcone=y
 
 # 加密加速
 CONFIG_PACKAGE_kmod-crypto-sha256=y
