--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -9,13 +9,7 @@ CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
 CONFIG_USE_LLD=y
 CONFIG_LTO_CLANG_THIN=y
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
-CONFIG_LLVM_BOLT=y
-CONFIG_LLVM_POLLY=y
-CONFIG_LLVM_CFI=y
-CONFIG_LLVM_CFI_CLANG=y
-CONFIG_LLVM_LTO_CLANG_THIN=y
-# 移除PGO相关配置，避免编译复杂性
-CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;bolt;polly"
+CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld" 
 CONFIG_LLVM_USE_LINKER=lld
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
 CONFIG_KERNEL_LTO=y        
@@ -76,7 +70,6 @@ CONFIG_NF_NAT_NEEDED=y    # 确保NAT功能完整
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-sched-fq=y
 CONFIG_PACKAGE_kmod-sched-cake=y
-CONFIG_PACKAGE_kmod-sched-bpf=y
 CONFIG_PACKAGE_kmod-sched-connmark=y
 CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-bonding=y
@@ -114,7 +107,6 @@ CONFIG_IP_MULTIPLE_TABLES=y
 CONFIG_NET_DEVLINK=y
 CONFIG_NET_SCH_DEFAULT=y
 CONFIG_DEFAULT_FQ_CODEL=y
-CONFIG_NET_CLS_FLOW=y
 CONFIG_NET_SCH_MQPRIO=y
 CONFIG_NET_EMATCH=y
 CONFIG_NET_ACT_MIRRED=y
@@ -127,11 +119,9 @@ CONFIG_NET_SCH_FQ_PIE=y
 # Netfilter硬件加速
 CONFIG_NETFILTER_FLOW_OFFLOAD=y
 CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y
-CONFIG_NETFILTER_XT_MATCH_BPF=y     
 CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
 CONFIG_NETFILTER_XT_MATCH_STATE=y
 CONFIG_NET_CLS_ACT=y  
-CONFIG_NET_CLS_FLOWER=y  
 CONFIG_NET_ACT_POLICE=y  
 
 ### i226网卡极致优化 ###
@@ -141,7 +131,6 @@ CONFIG_IGC_HWMON=y
 CONFIG_IGC_DIM=y
 CONFIG_IGC_VLAN_STRIPPING=y
 CONFIG_IGC_LRO=y
-CONFIG_IGC_XDP=y
 CONFIG_IGC_TAPRIO=y
 CONFIG_IGC_TSN=y
 CONFIG_IGC_LATENCY_TOLERANCE=y
@@ -168,48 +157,21 @@ CONFIG_IGC_RX_COPYBREAK=1024  # 增加拷贝断点提高小包性能
 CONFIG_IGC_RX_NAPI_WEIGHT=256  # 适中权重平衡延迟和吞吐量
 CONFIG_IGC_RSS=4  # 匹配CPU核心数
 
-### XDP核心配置 ###
-CONFIG_XDP_SOCKETS=y
-CONFIG_KERNEL_XDP_SOCKETS=y
-CONFIG_XDP_UMEM=y
-CONFIG_XSK_DIAG=y
-CONFIG_BPF=y
-CONFIG_BPF_SYSCALL=y
-CONFIG_BPF_JIT=y
-CONFIG_BPF_JIT_ALWAYS_ON=y
-CONFIG_BPF_JIT_HARDEN=y
-CONFIG_DEBUG_INFO_BTF=y
+
 CONFIG_DEBUG_KERNEL=n
 CONFIG_DEBUG_INFO=n
 CONFIG_DEBUG_INFO_REDUCED=n
-CONFIG_BPF_LSM=y
-CONFIG_KERNEL_BPF_EVENTS=y
-CONFIG_KERNEL_BPF_STREAM_PARSER=y
 CONFIG_KERNEL_CGROUPS=y
 CONFIG_KERNEL_KALLSYMS=y
 CONFIG_KERNEL_KPROBES=y
 CONFIG_KERNEL_KPROBE_EVENTS=y
 CONFIG_NET_INGRESS=y
 CONFIG_NET_CLS_ACT=y
-CONFIG_NET_CLS_BPF=y
-CONFIG_NET_ACT_BPF=y
-CONFIG_NET_SCH_INGRESS=y
-CONFIG_KERNEL_MODULE_ALLOW_BTF_MISMATCH=y
+CONFIG_NET_SCH_INGRESS=y CONFIG_KERNEL_MODULE_ALLOW_BTF_MISMATCH=y 
 CONFIG_KERNEL_NETKIT=y
 CONFIG_PACKAGE_iproute2-tc=y
 CONFIG_PACKAGE_ethtool-full=y
-CONFIG_PACKAGE_bpftool-full=y
-CONFIG_PACKAGE_libbpf-extra=y
-CONFIG_PACKAGE_libbpf=y
-CONFIG_PACKAGE_libxdp=y
 CONFIG_PACKAGE_libtirpc=y
-CONFIG_PACKAGE_clang=y
-CONFIG_PACKAGE_llvm=y
-CONFIG_KERNEL_LWTUNNEL_BPF=y
-CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
-CONFIG_XDP_DEFAULT_HASH=y
-CONFIG_XDP_SOCKETS_UMEM_ALIGNMENT=2048
-CONFIG_BPF_PRELOAD=y
 
 ### 中断优化 ###
 CONFIG_IRQ_FORCED_THREADING=y
@@ -257,8 +219,6 @@ CONFIG_RETPOLINE=n
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_ethtool=y
-CONFIG_PACKAGE_xdp-tools=y
-CONFIG_PACKAGE_bpftool=y
 
 ### LuCI应用 ###
 CONFIG_PACKAGE_luci-app-arpbind=y
