--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -40,6 +40,12 @@ CONFIG_MTRR=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 CONFIG_SCHED_MC=y
 CONFIG_SCHED_SMT=y
+# +++ 新增：抢占模式优化，降低延迟 +++
+CONFIG_PREEMPT_VOLUNTARY=y
+CONFIG_PREEMPT=y
+# +++ 新增：定时器频率提升，改善响应性 +++
+CONFIG_HZ=1000
+CONFIG_HZ_1000=y
 
 # ======================
 # Intel硬件深度优化（J4125+I226）
@@ -60,6 +66,9 @@ CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_XPS=y                     
 CONFIG_RFS_ACCEL=y              
 CONFIG_NET_RX_BUSY_POLL=y        
+# +++ 新增：Intel微码更新支持 +++
+CONFIG_MICROCODE_INTEL=y
+CONFIG_MICROCODE_LATE_LOADING=y
 
 # ======================
 # 内存管理优化（8GB低开销）
@@ -69,6 +78,11 @@ CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_PAGE_POOL=y                
 CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y 
+# +++ 优化：内存分配器性能调优 +++
+CONFIG_SLUB_DEBUG=n
+CONFIG_SLUB_CPU_PARTIAL_DEFAULT=16
+CONFIG_COMPACTION=y
+CONFIG_PAGE_COUNTER=y
 
 # ======================
 # 网络协议栈高性能配置
@@ -83,19 +97,13 @@ CONFIG_SYN_COOKIES=y
 CONFIG_UDP_GRO=y                  
 CONFIG_NET_SCH_FQ_CODEL=y
 CONFIG_NET_SCH_CAKE=y             
-
-# ======================
-# BPF/XDP零拷贝网络
-# ======================
-CONFIG_BPF=y
-CONFIG_BPF_SYSCALL=y
-CONFIG_BPF_JIT=y
-CONFIG_BPF_JIT_DEFAULT_ON=y      
-CONFIG_NET_CLS_BPF=y
-CONFIG_NET_ACT_BPF=y
-CONFIG_XDP_SOCKETS=y
-CONFIG_KERNEL_XDP_SOCKETS=y
-CONFIG_IGC_XDP=y                 
+# +++ 优化：TCP缓冲区调优，提升吞吐量 +++
+CONFIG_TCP_MD5SIG=y
+CONFIG_TCP_AO=y
+CONFIG_INET_ESP=y
+# +++ 优化：减少网络栈处理延迟 +++
+CONFIG_NET_RX_BUSY_POLL_DEFAULT=200
+CONFIG_NET_SCH_MQPRIO=y
 
 # ======================
 # Netfilter/NAT硬件卸载
@@ -111,6 +119,9 @@ CONFIG_NFT_NAT=y
 CONFIG_NFT_MASQ=y
 CONFIG_NETFILTER_FLOW_OFFLOAD=y  
 CONFIG_NF_FLOW_TABLE=y
+# +++ 优化：连接跟踪表大小调优 +++
+CONFIG_NF_CONNTRACK_EVENTS=y
+CONFIG_NF_CONNTRACK_TIMEOUT=y
 
 # ======================
 # 必要内核模块（精简版）
@@ -121,7 +132,6 @@ CONFIG_PACKAGE_kmod-nft-netdev=y
 CONFIG_PACKAGE_kmod-nft-offload=y
 CONFIG_PACKAGE_kmod-nf-conntrack=y
 CONFIG_PACKAGE_kmod-nf-nat=y
-CONFIG_PACKAGE_kmod-xdp-sockets=y
 
 # ======================
 # 用户态工具（性能监控/调优）
@@ -131,7 +141,6 @@ CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_libnftnl=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_ip-full=y         
-CONFIG_PACKAGE_libxdp=y          
 
 # ======================
 # LuCI应用配置 (精简实用)
@@ -151,3 +160,7 @@ CONFIG_PROFILING=n                # 关闭性能剖析
 CONFIG_NET_DROP_MONITOR=n         # 关闭丢包监控
 CONFIG_FTRACE=n                   # 关闭跟踪框架
 CONFIG_KPROBES=n                  # 关闭探测点
+# +++ 优化：关闭更多调试功能 +++
+CONFIG_DEBUG_KERNEL=n
+CONFIG_DEBUG_MISC=n
+CONFIG_DEBUG_LIST=n
