--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -116,6 +116,54 @@ CONFIG_NF_CONNTRACK_EVENTS=y
 CONFIG_NF_CONNTRACK_TIMEOUT=y
 
 # ======================
+# BPF/eBPF完整配置
+# ======================
+CONFIG_BPF=y
+CONFIG_BPF_SYSCALL=y
+CONFIG_BPF_JIT=y
+CONFIG_BPF_JIT_ALWAYS_ON=y
+CONFIG_BPF_JIT_DEFAULT_ON=y
+CONFIG_HAVE_EBPF_JIT=y
+CONFIG_BPF_EVENTS=y
+CONFIG_BPF_STREAM_PARSER=y
+CONFIG_BPF_LSM=y
+CONFIG_BPF_PRELOAD=y
+CONFIG_DEBUG_INFO_BTF=y
+CONFIG_DEBUG_INFO_BTF_MODULES=y
+CONFIG_BPF_UNPRIV_DEFAULT_OFF=y
+CONFIG_CGROUP_BPF=y
+CONFIG_BPF_LIRC_MODE2=y
+CONFIG_NET_CLS_BPF=y
+CONFIG_NET_ACT_BPF=y
+CONFIG_BPFILTER=y
+CONFIG_BPFILTER_UMH=y
+CONFIG_LWTUNNEL_BPF=y
+CONFIG_NET_SCH_INGRESS=y
+CONFIG_NET_EGRESS=y
+CONFIG_NET_XGRESS=y
+CONFIG_BPF_KPROBE_OVERRIDE=y
+
+# ======================
+# XDP完整配置
+# ======================
+CONFIG_XDP_SOCKETS=y
+CONFIG_XDP_SOCKETS_DIAG=y
+CONFIG_XSK_UMEM_DEFAULT_BATCH_SIZE=64
+CONFIG_XDP_OFFLOAD=y
+CONFIG_XDP_TX=y
+CONFIG_XDP_REDIRECT=y
+CONFIG_XDP_FRAME=y
+CONFIG_XSK_BUFF_ALLOC=y
+CONFIG_XSK_BATCHED_DESC=y
+CONFIG_XSK_GEN_RX_SUPPORT=y
+CONFIG_XSK_GEN_TX_SUPPORT=y
+CONFIG_NET_XDP=y
+CONFIG_NET_XDP_GENERIC=y
+CONFIG_NET_XDP_SOCKETS=y
+CONFIG_NET_XDP_UMEM=y
+CONFIG_NET_XDP_UMEM_DMA=y
+
+# ======================
 # 必要内核模块（精简版）
 # ======================
 CONFIG_PACKAGE_kmod-tcp-bbr=y     
@@ -126,6 +174,12 @@ CONFIG_PACKAGE_kmod-nf-conntrack=y
 CONFIG_PACKAGE_kmod-nf-nat=y
 CONFIG_PACKAGE_kmod-nf-nat6=y          
 CONFIG_PACKAGE_kmod-nf-flow-table=y
+CONFIG_PACKAGE_kmod-bpf-testmod=y
+CONFIG_PACKAGE_kmod-bpfilter=y
+CONFIG_PACKAGE_kmod-xdp-sockets=y
+CONFIG_PACKAGE_kmod-xdp-tools=y
+CONFIG_PACKAGE_kmod-xdp-umem=y
+CONFIG_PACKAGE_kmod-xdp-redirect=y
 
 # ======================
 # 用户态工具（性能监控/调优）
@@ -134,7 +188,13 @@ CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_irqbalance=y       
 CONFIG_PACKAGE_libnftnl=y
 CONFIG_PACKAGE_iperf3=y
-CONFIG_PACKAGE_ip-full=y         
+CONFIG_PACKAGE_ip-full=y
+CONFIG_PACKAGE_bpftool=y
+CONFIG_PACKAGE_bpf-trace=y
+CONFIG_PACKAGE_xdp-tools=y
+CONFIG_PACKAGE_libbpf=y
+CONFIG_PACKAGE_libxdp=y
+CONFIG_PACKAGE_libbpf-extra=y
 
 # ======================
 # LuCI应用配置 (精简实用)
@@ -144,6 +204,7 @@ CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_PACKAGE_luci-app-firewall=y
+CONFIG_PACKAGE_luci-app-bpf-monitor=y
 
 # ======================
 # 生产环境调试精简
@@ -154,7 +215,9 @@ CONFIG_PROFILING=n                # 关闭性能剖析
 CONFIG_NET_DROP_MONITOR=n         # 关闭丢包监控
 CONFIG_FTRACE=n                   # 关闭跟踪框架
 CONFIG_KPROBES=n                  # 关闭探测点
-# +++ 优化：关闭更多调试功能 +++
 CONFIG_DEBUG_KERNEL=n
 CONFIG_DEBUG_MISC=n
 CONFIG_DEBUG_LIST=n
+CONFIG_BPF_SYSCALL_DEBUG=n
+CONFIG_BPF_JIT_DEBUG=n
+CONFIG_TEST_BPF=n
