--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -182,6 +182,11 @@ CONFIG_PACKAGE_kmod-xdp-tools=y
 CONFIG_PACKAGE_kmod-xdp-umem=y
 CONFIG_PACKAGE_kmod-xdp-redirect=y
 CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
+CONFIG_PACKAGE_kmod-sched-bpf=y
+CONFIG_PACKAGE_kmod-sched-core=y
+CONFIG_PACKAGE_kmod-ifb=y
+CONFIG_PACKAGE_kmod-pf-ring=y
+CONFIG_PACKAGE_kmod-sched-cake=y
 
 # ======================
 # 用户态工具（性能监控/调优）
